<resources>
    <string name="app_name">BitSafe</string>
    <string name="start">Empezar</string>
    <string name="login_celular_registro">Registrarme</string>
    <string name="login_huella_registro">Registrarme</string>
    <string name="login_huella_introduce">INTRODUCE LA CONTRASEÑA</string>
    <string name="login_celular_numero">número de celular</string>
    <string name="registro_registro">Registro</string>
    <string name="registro_nombre">Nombre</string>
    <string name="cambiar_pin">Cambiar PIN</string>
    <string name="cambiar_huella">Cambiar Huella</string>
    <string name="registro_cedula">Cédula</string>
    <string name="registro_celular">Celular</string>
    <string name="registro_contrasenia">Contraseña</string>
    <string name="registro_contrasenia_confirmar">Confirmar contraseña</string>
    <string name="registro_registrarse">Registrarse</string>
    <string name="registro_registrarse_facebook">Registrarse con Facebook</string>
    <string name="registro_registrarse_bitsafe">Registrarse con cuenta Bitsafe</string>
    <string name="registro_registrarse_google">Registrarse con Google</string>
    <string name="registro_correo">Correo</string>
    <string name="registro_ubicacion">Ubicación</string>
    <string name="registro_labor">Trabajo</string>
    <string name="registro_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="registro_genero">Genero</string>
    <string name="opciones_prompt">Datos opcionales</string>
    <string-array name="opciones_arrays">
        <item>Correo</item>
        <item>Ubicación</item>
    </string-array>
    <string name="home_admin_clientes">Clientes</string>
    <string name="home_admin_estadisticas">Estadísticas</string>
    <string name="home_admin_transacciones">Transacciones</string>
    <string name="home_admin_cargar">Cargar</string>
    <string name="fragment_carga_toolbar">Cargar Información</string>
    <string name="fragment_clientes_toolbar">Clientes</string>
    <string name="fragment_estadisticas_toolbar">Estadísticas</string>
    <string name="fragment_transacciones_toolbar">Transacciones</string>
    <string name="fragment_clientes_filtro">Buscar clientes ...</string>
    <string name="fragment_estadisticas_descripcion">Descripción</string>
    <string name="fragment_transacciones_ingresar_monto">Ingresar monto:</string>
    <string name="fragment_transacciones_ingresar_clientes">Ingresar clientes:</string>
    <string name="fragment_transacciones_agregar_monto">Agrega monto</string>
    <string name="fragment_transacciones_cliente_origen">Cliente Origen</string>
    <string name="fragment_transacciones_cliente_destino">Cliente Destino</string>
    <string name="fragment_transacciones_ingresar_fecha">Ingresar fecha:</string>
    <string name="fragment_transacciones_agregar_fecha">Agregar una fecha</string>
    <string name="fragment_transacciones_descripcion">Descripción:</string>
    <string name="fragment_transacciones_agregar_descripcion">Agrega una descripción</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_finanzas_toolbar">Mis Finanzas</string>
    <string name="fragment_planes_toolbar">Planes de Ahorro</string>
    <string name="fragment_cuentas_toolbar">Cuentas Bancarias</string>
    <string name="home_clientes_finanzas">Finanzas</string>
    <string name="home_clientes_planes">Planes</string>
    <string name="home_clientes_cuentas">Cuentas</string>
    <string name="fragment_agregar_monto_toolbar">Agregar Monto</string>
    <string name="fragment_agregar_monto_monto">0</string>
    <string name="fragment_agregar_monto_guardar_monto">Guardar Monto</string>
    <string name="fragment_sl_clientes_toolbar">Seleccionar Cliente</string>
    <string name="fragment_agregar_fecha_toolbar">Fecha de Transacción</string>
    <string name="fragment_agregar_fecha">Fecha: </string>
    <string name="fragment_agregar_fecha_guardar_fecha">Guardar Fecha</string>
    <string name="fragment_agregar_fecha_min_day">01/10/2019</string>
    <string name="fragment_dt_clientes_toolbar">Cuenta:</string>
    <string name="fragment_dt_clientes_guardarInfo">Guardar Info</string>


    <!--HECHO POR MURIEL-->

    <string name="fragment_finanzas_ingresos_gastos_line_chart">Resumen de Ingresos y Gastos a través del tiempo</string>
    <string name="fragment_finanzas_ingresos_gastos_bar_chart">Resumen de Ingresos y gastos por categorías </string>
    <string name="fragment_finanzas_ingresos_gastos_pie_chart">Resumen de Transacciones por categorías</string>


    <!-- TRANSACCIONES -->
    <string name="fragment_finanzas_transacciones_toolbar">Transacciones</string>
    <string name="fragment_finanzas_transacciones_monto">Monto:</string>
    <string name="fragment_finanzas_transacciones_categoria">Categoría:</string>
    <string name="fragment_finanzas_transacciones_descripcion">Descripción:</string>
    <string name="fragment_finanzas_transacciones_fecha">Fecha:</string>
    <string name="fragment_finanzas_transacciones_historial_transacciones">Historial de transacciones</string>
    <!-- BANCOS -->
    <string name="fragment_finanzas_bancos_toolbar">Bancos</string>
    <string name="fragment_finanzas_bancos_nombre_busqueda">Ingresar nombre del banco</string>
    <string name="fragment_finanzas_bancos_monto_total">Monto Total:</string>
    <string name="fragment_finanzas_bancos_nombre_banco">Nombre:</string>

    <!-- Crear Transaccion -->
    <string name="fragment_finanzas_crear_transaccion_categorias_titulo">Categorías:</string>
    <string name="fragment_finanzas_crear_transaccion_categorias_agregar">Agregar categoría</string>
    <string name="fragment_finanzas_crear_transaccion_btn_cancelar">Cancelar</string>
    <string name="fragment_finanzas_crear_transaccion_btn_guardar">Guardar</string>

    <!--CUENTAS -->
    <string name="fragment_finanzas_cuentas_toolbar">Cuentas Bancarias</string>
    <string name="fragment_finanzas_cuentas_titulo_tus_cuentas">Tus Cuentas</string>
    <string name="fragment_finanzas_cuentas_fecha_vinculacion">Fecha de vinculación:</string>
    <string name="fragment_finanzas_cuentas_saldo">Saldo:</string>

    <string name="login_correo_ingresar">Correo</string>
    <string name="login_correo_ingresar_contrasenia">Contraseña</string>
    <string name="login_correo">Iniciar Sesión</string>

    <string name="fragment_perfil_clientes">Perfil</string>
    <string name="fragment_micuenta_clientes">Editar Perfil</string>

    <string name="gener_prompt">Genero</string>
    <string-array name="gener_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
        <item>Prefiereo no mencionarlo</item>
    </string-array>

    <string-array name="momentos_dia">
        <item>Diario</item>
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
    </string-array>

    <string-array name="dias_semana">
        <item>Semanal</item>
        <item>Lu</item>
        <item>Ma</item>
        <item>Mi</item>
        <item>Ju</item>
        <item>Vi</item>
        <item>Sa</item>
        <item>Do</item>
    </string-array>

    <string-array name="dias_semana_2">
        <item>Cada 2 Semanas</item>
        <item>Lu</item>
        <item>Ma</item>
        <item>Mi</item>
        <item>Ju</item>
        <item>Vi</item>
        <item>Sa</item>
        <item>Do</item>
    </string-array>

    <string-array name="calendario">
        <item>Mensual</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string name="title_ayuda">¿Necesitas ayuda?</string>
    <string name="facebook_app_id">467274344078371</string>
    <string name="fb_login_protocol_scheme">fb467274344078371</string>
    <string name="loading"></string>
    <string name="terminos_y_condiciones">Terminos y Condiciones</string>
    <string name="mensaje_terminos_condiciones"> \n \nA continución, la remisión o puesta en conocimiento,
        o publicación del reglamento o sus modificaciones o actualizaciones en la página Web del BANCO, este Reglamento se entenderá aceptado por EL CLIENTE con la contratación de productos y/o con la suscripción  de la tarjeta de firmas en la que se establecen las condiciones
        de manejo de las cuentas y/o con el recibo de la Tarjeta Débito, Talonario o cualquier otro medio de manejo recibido por EL CLIENTE y/o con la utilización del producto, canal o servicio asociados y/o manteniendo de fondos disponibles en las cuentas y/o al mantener los productos y/o seguir realizando operaciones o utilizando servicios.</string>
    <string name="comunicacion_ayuda">Comunicate con nuestro centro de atención 01800 6784637</string>
    <string name="aceptar_terminos">Aceptar Terminos y Condiciones</string>
    <string name="mensaje_aceptar_y_terminos">Es necesario aceptar los terminos y condiciones para continuar con nuestros servicios</string>



    <string name="descripcion_grafica_generos">La presente gráfica refleja en porcentaje de usuarios de género femenino y masculino presentes en el Bitsafe</string>
    <string name="descripcion_grafica_clientes">La presente gráfica refleja el número de usuarios que se registraron por mes en este año en Bitsafe</string>

    <string name="guardar_transaccion">Guardar</string>
    <string name="confirmacion">¿Desea guardar la transacción?</string>

    <string name="aceptar">Aceptar</string>




    <string name="guardar">Guardar</string>
    <string name="confirmacion_guardar_cambios">¿Desea guardar los cambios?</string>


    <string name="cancelar">Cancelar</string>


    <string name="desea_salir">¿Desea Salir?</string>
    <string name="mensaje_salida">Por que te vas, tan pronto...</string>


    <string name="inscripcion_correcto">Agrego Correctamente</string>
    <string name="se_agrego_satisfactoriamente">Se agregar los clientes Satisfactoriamente!</string>
>>>>>>> origin/master
</resources>
