<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_registro_icon_bitsafe"
            android:layout_width="@dimen/login_rl_panel_w"
            android:layout_height="@dimen/login_rl_panel_h"
            android:background="@color/colorBitsafeBlue">

            <ImageView
                android:id="@+id/iv_login_icon_bitsafe"
                android:layout_width="@dimen/login_iv_icon_w"
                android:layout_height="@dimen/login_iv_icon_h"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/aplicacion_ic_bitsafe_icon" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_registro_icon_bitsafe"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tv_registro_texto_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/registro_registro"
                android:textColor="@color/colorBitsafeBlue"
                android:textSize="20dp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_registro_nombre"
                android:layout_width="@dimen/registro_et_campos_registro_w"
                android:layout_height="@dimen/registro_et_campos_registro_h"
                android:layout_below="@+id/tv_registro_texto_registro"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:allowUndo="true"
                android:background="@drawable/registro_figura_texto_redondo_registro"
                android:drawableLeft="@drawable/registro_ic_nombre"
                android:freezesText="true"
                android:gravity="left|center"
                android:hint="@string/registro_nombre"
                android:textColorHint="@color/colorBitsafeRegistro"
                android:textSize="@dimen/registro_et_tamanio_campos" />

            <EditText
                android:id="@+id/et_registro_cedula"
                android:layout_width="@dimen/registro_et_campos_registro_w"
                android:layout_height="@dimen/registro_et_campos_registro_h"
                android:layout_below="@+id/et_registro_nombre"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:allowUndo="true"
                android:background="@drawable/registro_figura_texto_redondo_registro"
                android:drawableLeft="@drawable/registro_ic_cedula"
                android:gravity="center|left"
                android:hint="@string/registro_cedula"
                android:inputType="phone"
                android:maxLength="10"
                android:textColorHint="@color/colorBitsafeRegistro"
                android:textSize="@dimen/registro_et_tamanio_campos" />


            <EditText
                android:id="@+id/et_registro_celular"
                android:layout_width="@dimen/registro_et_campos_registro_w"
                android:layout_height="@dimen/registro_et_campos_registro_h"
                android:layout_below="@+id/et_registro_cedula"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:allowUndo="true"
                android:background="@drawable/registro_figura_texto_redondo_registro"
                android:drawableLeft="@drawable/registro_ic_smartphone"
                android:gravity="center|left"
                android:hint="@string/registro_celular"
                android:inputType="phone"
                android:textColorHint="@color/colorBitsafeRegistro"
                android:textSize="@dimen/registro_et_tamanio_campos" />

            <EditText
                android:id="@+id/et_registro_ubicacion"
                android:layout_width="@dimen/registro_et_campos_registro_w"
                android:layout_height="@dimen/registro_et_campos_registro_h"
                android:layout_below="@+id/et_registro_celular"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:allowUndo="true"
                android:background="@drawable/registro_figura_texto_redondo_registro"
                android:drawableLeft="@drawable/registro_ic_house"
                android:gravity="center|left"
                android:hint="@string/registro_ubicacion"
                android:textColorHint="@color/colorBitsafeRegistro"
                android:textSize="@dimen/registro_et_tamanio_campos" />

            <Button
                android:id="@+id/et_registro_fecha_nacimiento"
                android:layout_width="@dimen/registro_et_campos_registro_w"
                android:layout_height="@dimen/registro_et_campos_registro_h"
                android:layout_below="@+id/et_registro_ubicacion"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/registro_figura_texto_redondo_registro"
                android:drawableLeft="@drawable/registro_ic_fecha"
                android:gravity="center|left"
                android:hint="@string/registro_fecha_nacimiento"
                android:textColorHint="@color/colorBitsafeRegistro"
                android:textSize="@dimen/registro_et_tamanio_campos" />

            <Spinner
                android:id="@+id/sp_registro_genero"
                android:layout_width="@dimen/registro_et_campos_registro_w"
                android:layout_height="@dimen/registro_et_campos_registro_h"
                android:layout_below="@+id/et_registro_fecha_nacimiento"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/registro_figura_texto_redondo_registro"
                android:entries="@array/gener_array"
                android:gravity="center|left"
                android:hint="@string/registro_genero"
                android:textColorHint="@color/colorBitsafeRegistro"
                android:textSize="@dimen/registro_et_tamanio_campos" />

            <TextView
                android:id="@+id/separador"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/sp_registro_genero"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorBitsafeGray" />

            <EditText
                android:id="@+id/et_registro_correo"
                android:layout_width="@dimen/registro_et_campos_registro_w"
                android:layout_height="@dimen/registro_et_campos_registro_h"
                android:layout_below="@+id/separador"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:allowUndo="true"
                android:background="@drawable/registro_figura_texto_redondo_registro"
                android:drawableLeft="@drawable/registro_ic_correo"
                android:gravity="center|left"
                android:inputType="textEmailAddress"
                android:hint="@string/registro_correo"
                android:justificationMode="inter_word"
                android:textColorHint="@color/colorBitsafeRegistro"
                android:textSize="@dimen/registro_et_tamanio_campos" />

            <EditText
                android:id="@+id/et_registro_contrasenia"
                android:layout_width="@dimen/registro_et_campos_opcionales_registro_w"
                android:layout_height="@dimen/registro_et_campos_opcionales_registro_h"
                android:layout_below="@+id/et_registro_correo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/registro_figura_texto_redondo_opciones"
                android:drawableRight="@drawable/registro_ic_password"
                android:gravity="center"
                android:hint="@string/registro_contrasenia"
                android:inputType="textWebPassword"
                android:textColorHint="@color/colorBitsafeRegistro"
                android:textSize="@dimen/registro_et_tamanio_campos" />

            <EditText
                android:id="@+id/et_registro_confirmar_contrasenia"
                android:layout_width="@dimen/registro_et_campos_opcionales_registro_w"
                android:layout_height="@dimen/registro_et_campos_opcionales_registro_h"
                android:layout_below="@+id/et_registro_contrasenia"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/registro_figura_texto_redondo_opciones"
                android:drawableRight="@drawable/registro_ic_password"
                android:gravity="center"
                android:hint="@string/registro_contrasenia_confirmar"
                android:inputType="textWebPassword"
                android:textColorHint="@color/colorBitsafeRegistro"
                android:textSize="@dimen/registro_et_tamanio_campos" />

            <RelativeLayout
                android:id="@+id/tv_terminos_condiciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/et_registro_confirmar_contrasenia"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20sp">

                <CheckBox
                    android:id="@+id/checkbox_terminos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tv_ter_con"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:text="@string/terminos_y_condiciones"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="2dp"
                    android:layout_below="@+id/tv_ter_con"
                    android:background="@color/colorBlack"
                    android:text="@string/terminos_y_condiciones"
                    android:textStyle="italic" />

            </RelativeLayout>


            <Button
                android:id="@+id/btn_registro_registrarse"
                android:layout_width="@dimen/registro_btn_registrarse_w"
                android:layout_height="@dimen/registro_btn_registrarse_h"
                android:layout_below="@+id/tv_terminos_condiciones"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/registro_boton_registrarse"
                android:hint="@string/registro_registrarse"
                android:textColorHint="@color/colorWhite" />


        </RelativeLayout>

    </RelativeLayout>
</ScrollView>